Add events CRUD
