# docs/openapi/fibness_api.yaml
@@ -20,6 +20,8 @@ tags:
     description: Operations about aliments
   - name: comment
     description: Operations about comments
+  - name: event
+    description: Operations about events
 paths:
   /user:
     post:
@@ -1912,3 +1914,158 @@ paths:
                     nlikes:
                       type: integer
                       example: 2
+  /event:
+    post:
+      summary: Creates an event
+      tags:
+        - event
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                titulo:
+                  type: string
+                  example: Partido de futbol
+                descripcion:
+                  type: string
+                  example: Hola
+                fecha:
+                  type: string
+                  example: '2020-06-02'
+                hora:
+                  type: string
+                  example: '23:59'
+                localizacion:
+                  type: string
+                  example: '2.0941546718608492;41.323306159501385'
+                idcreador:
+                  type: integer
+                  minimum: 1
+                  example: 1234
+              required:
+                - titulo
+                - descripcion
+                - fecha
+                - hora
+                - localizacion
+                - idcreador
+      responses:
+        201:
+          description: Event created correctly
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    minimum: 1
+                    example: 1234
+  /event/{id}:
+    get:
+      summary: Returns an event
+      tags:
+        - event
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the event
+          schema:
+            type: integer
+            minimum: 1
+      responses:
+        200:
+          description: Event returned correctly
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  titulo:
+                    type: string
+                    example: Partido de futbol
+                  descripcion:
+                    type: string
+                    example: Hola
+                  fecha:
+                    type: string
+                    example: '2020-06-02'
+                  hora:
+                    type: string
+                    example: '23:59'
+                  localizacion:
+                    type: string
+                    example: '2.0941546718608492;41.323306159501385'
+                  idcreador:
+                    type: integer
+                    minimum: 1
+                    example: 1234
+                required:
+                  - titulo
+                  - descripcion
+                  - fecha
+                  - hora
+                  - localizacion
+                  - idcreador
+    put:
+      summary: Edits an event
+      tags:
+        - event
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the event
+          schema:
+            type: integer
+            minimum: 1
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                titulo:
+                  type: string
+                  example: Partido de futbol
+                descripcion:
+                  type: string
+                  example: Hola
+                fecha:
+                  type: string
+                  example: '2020-06-02'
+                hora:
+                  type: string
+                  example: '23:59'
+                localizacion:
+                  type: string
+                  example: '2.0941546718608492;41.323306159501385'
+              required:
+                - titulo
+                - descripcion
+                - fecha
+                - hora
+                - localizacion
+      responses:
+        200:
+          description: Event edited succesfully
+    delete:
+      summary: Deletes an event
+      tags:
+        - event
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the event
+          schema:
+            type: integer
+            minimum: 1
+      responses:
+        200:
+          description: Event deleted succesfully
