# src/app.js
@@ -13,6 +13,7 @@ const aliment = require("./routes/aliment")
 const exercise = require("./routes/exercise")
 const route = require("./routes/route")
 const comment = require("./routes/comment")
+const event = require('./routes/event')
 
 //Middleware
 const errorHandler = require("./middleware/errorHandlers");
@@ -35,8 +36,9 @@ app.use("/exercise",exercise);
 app.use("/diet", diet);
 app.use("/meal", meal);
 app.use("/aliment", aliment);
-app.use("/route",route);
-app.use("/comment",comment);
+app.use("/route", route);
+app.use("/comment", comment);
+app.use('/event', event)
 
 app.get("/test", (req, res) => {
     console.log("Hello");
